<resources>
    <string name="app_name">Dermalysis</string>
    <string name="welcome">Welcome</string>
    <string name="dermalisys">Dermalysis</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="register_text_link">Belum punya akun? <u>Register</u></string>
    <string name="login_text_link">Sudah punya akun? <u>Login</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="fullname">Fullname</string>
    <string name="temukan_solusi_permasalahan_kulit_anda">Temukan solusi\npermasalahan\nkulit anda</string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_image_warning">Image is empty!</string>
    <string name="retry">Retry</string>
    <string name="ganti_password">Reset Password</string>
    <string name="fill_email">We will send you a reset email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_email_send">We will send you an email:</string>
    <string name="update_name">Update Name</string>
    <string name="your_new_name">Your new name</string>
    <string name="your_email">Your Email</string>
</resources>